refactor: 사용하지 않는 빈 생성자 삭제